--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,5 @@
 # Enable mod_rewrite
 RewriteEngine On
-RewriteBase /Campusxchange/
 
 # Clean URLs for root pages
 RewriteRule ^$ index.php [L]
@@ -24,6 +23,13 @@ RewriteRule ^internship/apply$ internship/apply.php [L]
 RewriteRule ^internship/verification$ internship/verification.php [L]
 RewriteRule ^internship/verifiedintern$ internship/verifiedintern.php [L]
 
+#Dashboard Control
+RewriteRule ^dashboard/clients$ dashboard/web_client.php [L]
+RewriteRule ^dashboard/verified-intern$ dashboard/verified_intern.php [L]
+RewriteRule ^dashboard/applied-intern$ dashboard/applied_intern.php [L]
+RewriteRule ^dashboard/notes$ dashboard/notes.php [L]
+RewriteRule ^dashboard/admin$ dashboard/admin.php [L]
+
 #sitemap
 RewriteRule ^sitemap$ sitemap.php [L]
 
@@ -41,3 +47,23 @@ RewriteRule . /Campusxchange/404.php [L]
 # Set proper 404 status for Apache
 ErrorDocument 404 /Campusxchange/404.php
 
+
+
+
+
+
+
+
+
+# # Prevent redirect loop for 404.php itself
+# RewriteCond %{REQUEST_URI} !^/404\.php$
+
+# # If requested file or directory does NOT exist
+# RewriteCond %{REQUEST_FILENAME} !-f
+# RewriteCond %{REQUEST_FILENAME} !-d
+
+# # Redirect all non-existent URLs to 404.php
+# RewriteRule . /404.php [L]
+
+# # Set proper 404 status for Apache
+# ErrorDocument 404 /404.php
