--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,19 @@
+# =========================
+# 🔧 CAMPUSXCHANGE .htaccess COMPLETE FIXED
+# =========================
+
 # Enable mod_rewrite
 RewriteEngine On
-# to redirect if any one open  with www.campusxchange.wuaze.com
+
+# Redirect www to non-www
 RewriteCond %{HTTP_HOST} ^www\.campusxchange\.wuaze\.com [NC]
 RewriteRule ^(.*)$ https://campusxchange.wuaze.com/$1 [L,R=301]
 
-# Clean URLs for root pages
+# =========================
+# Clean URLs
+# =========================
+
+# Root pages
 RewriteRule ^$ index.php [L]
 RewriteRule ^home$ index.php [L]
 RewriteRule ^about$ about.php [L]
@@ -12,28 +21,28 @@ RewriteRule ^lettalk$ lettalk.php [L]
 RewriteRule ^internship-program$ internship.php [L]
 RewriteRule ^privacy-policyandterms$ privacy.php [L]
 
-# Clean URLs for handouts subfolder
+# Handouts subfolder
 RewriteRule ^handouts/notes$ handouts/notes.php [L]
 RewriteRule ^handouts/blog$ handouts/blog.php [L]
 RewriteRule ^handouts/assignment$ handouts/assignment.php [L]
 
-# Clean URLs for services subfolder
+# Services subfolder
 RewriteRule ^services/web-development$ services/webdevelopment.php [L]
 RewriteRule ^services/seo$ services/seo.php [L]
 
-# Clean URLs for internship subfolder
+# Internship subfolder
 RewriteRule ^internship/apply$ internship/apply.php [L]
 RewriteRule ^internship/verification$ internship/verification.php [L]
 RewriteRule ^internship/verifiedintern$ internship/verifiedintern.php [L]
 
-#Dashboard Control
+# Dashboard control
 RewriteRule ^dashboard/clients$ dashboard/web_client.php [L]
 RewriteRule ^dashboard/verified-intern$ dashboard/verified_intern.php [L]
 RewriteRule ^dashboard/applied-intern$ dashboard/applied_intern.php [L]
 RewriteRule ^dashboard/notes$ dashboard/notes.php [L]
 RewriteRule ^dashboard/admin$ dashboard/admin.php [L]
 
-#sitemap
+# Sitemap
 RewriteRule ^sitemap$ sitemap.php [L]
 
 # Prevent redirect loop for 404.php itself
@@ -49,9 +58,8 @@ RewriteRule . /404.php [L]
 # Set proper 404 status for Apache
 ErrorDocument 404 /404.php
 
-
 # =========================
-# 🔒 CAMPUSXCHANGE SECURITY HEADERS
+# 🔒 CAMPUSXCHANGE SECURITY HEADERS (Fixed)
 # =========================
 <IfModule mod_headers.c>
 
@@ -64,19 +72,20 @@ ErrorDocument 404 /404.php
     # Basic XSS protection
     Header set X-XSS-Protection "1; mode=block"
 
-    # Hide detailed referrer info (fixes Missing Referrer Header)
+    # Hide detailed referrer info
     Header set Referrer-Policy "strict-origin-when-cross-origin"
 
-    # Restrict browser features (optional, safe defaults)
+    # Restrict browser features (optional)
     Header set Permissions-Policy "geolocation=(), microphone=(), camera=()"
 
-    # Prevent content being loaded into iframes from other sites
-    Header set Cross-Origin-Embedder-Policy "require-corp"
-    Header set Cross-Origin-Opener-Policy "same-origin"
-    Header set Cross-Origin-Resource-Policy "same-origin"
+    # Cross-origin policies (allow external embeds)
+    Header set Cross-Origin-Embedder-Policy "unsafe-none"
+    Header set Cross-Origin-Opener-Policy "same-origin-allow-popups"
+    Header set Cross-Origin-Resource-Policy "cross-origin"
 
-    # Optional: enable basic CSP (Content Security Policy)
-    Header set Content-Security-Policy "default-src 'self' https: data:; script-src 'self' 'unsafe-inline' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; frame-ancestors 'self';"
+    # Content Security Policy (allow Google Maps & YouTube)
+Header set Content-Security-Policy "default-src 'self' https: data:; script-src 'self' 'unsafe-inline' https://www.youtube.com https://maps.googleapis.com https://maps.gstatic.com https://cdnjs.cloudflare.com https://use.fontawesome.com https://kit.fontawesome.com; style-src * 'unsafe-inline'; img-src 'self' data: https:; frame-src https://www.youtube.com https://www.google.com https://www.google.com/maps https://maps.google.com; frame-ancestors 'self';"
+
 
 </IfModule>
 
